--- a/josh.css
+++ b/josh.css
@@ -1,10 +1,9 @@
 #avatar_box{
-    width:300px;
-    height:100px;
-    border-color:red 1px solid;
+    width:200px;
+    height:75px;
+    border:red 1px solid;
     display:flex;
-
-
+    justify-content: space-evenly;
 }
 
 #avatar_image{
