--- a/app2.css
+++ b/app2.css
@@ -16,5 +16,7 @@
     width: 200px; 
     border: 1px solid black; 
     background-color: #ADD; 
+    justify-content: center;
+    align-items: center;
     
 }
