--- a/avatar.css
+++ b/avatar.css
@@ -1,7 +1,8 @@
 #avatar_box{
     width:200px;
     height:75px;
-    border:red 1px solid;
+    background-color:slategray;
+    color:white;
     display:flex;
     justify-content: space-evenly;
 }
